@@ -1,3 +1,12 @@
+2001-07-23  Martin Baulig  <baulig@suse.de>
+
+	* bonobo/bonobo-ui-engine.c (BonoboUIEngineClass): Added
+	"destroy" signal.
+
+	* bonobo/bonobo-ui-container.c
+	(bonobo_ui_container_set_engine): Connect to the engine's
+	"destroy" signal.
+
 2001-07-22  Martin Baulig  <baulig@suse.de>
 
 	* bonobo/bonobo-ui-xml.c (bonobo_ui_xml_strip): Removed.
